[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/SkeletonArcher/assets/Arrow_2.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Projectile.gd" type="Script" id=2]
[ext_resource path="res://Enemies/SkeletonArcher/assets/Arrow_1.png" type="Texture" id=4]
[ext_resource path="res://Combat/Hurtbox.tscn" type="PackedScene" id=7]

[sub_resource type="PhysicsMaterial" id=7]
absorbent = true

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=17]
radius = 4.0
height = 14.0

[node name="Projectile" type="RigidBody2D"]
z_index = 1000
collision_layer = 64
collision_mask = 0
physics_material_override = SubResource( 7 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
can_sleep = false
linear_damp = 0.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -10, -1 )
shape = SubResource( 4 )

[node name="OrphanTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_layer = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 1, 0.572549, 0, 1 )
position = Vector2( -3, -1 )
rotation = 1.5708
shape = SubResource( 17 )

[connection signal="body_entered" from="." to="." method="_on_GhostBullet_body_entered"]
[connection signal="timeout" from="OrphanTimer" to="." method="_on_OrphanTimer_timeout"]
[connection signal="dealt_damage" from="Hurtbox" to="." method="_on_Hurtbox_dealt_damage"]
